# vrm-lstm

./: .env.sample  Dockerfile  README.md  api.py  config.yaml  docker-compose.yml  preprocessing.py  pyproject.toml  requirements.txt
notebooks/: 25-02-26-23_28-LightGBMRegressor-f0d82e7f5ee899cc2a4265740690f86a.ipynb  characterization.ipynb  eda.ipynb  model.ipynb  motor_breaks.ipynb  pca.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb
src/: schema.py  statistical.py  vizualization.py
